@@ -7,8 +7,8 @@ def update_model_fields(obj,update_fields=[]):
     """
     field_entry = {}
     for k in update_fields:
-       if hasattr(obj,k) :
-           field_entry[k] = getattr(obj,k)
+        if hasattr(obj,k) :
+            field_entry[k] = getattr(obj,k)
     
     rows = obj.__class__.objects.filter(pk=obj.pk).update(**field_entry)
     return rows
